# nat_mcp_template

./: .env  Dockerfile.server  pyproject.toml  render.yaml  requirements.txt
llm_summarizer/: pyproject.toml
llm_summarizer/configs/: config.yml
llm_summarizer/src/llm_summarizer/: llm_summarizer_function.py  register.py
llm_summarizer/src/llm_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
llm_summarizer/src/llm_summarizer/configs/: config.yml
mcp/: .env  mcp-client-config.yml  mcp-server-config.yml
pdf_reader/: pyproject.toml
pdf_reader/configs/: config.yml
pdf_reader/src/pdf_reader/: pdf_reader_function.py  register.py
pdf_reader/src/pdf_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pdf_reader/src/pdf_reader/configs/: config.yml
read_me_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
