[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "read-me-agent"
version = "0.1.0"
description = "Summarize and analyze documents using AI"
requires-python = ">=3.11"
dependencies = [
    "aiqtoolkit>=1.2.0",
    "fastapi",
    "uvicorn[standard]",
    "nvidia-nat>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

# Code formatting
[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120